--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <link rel="stylesheet" href="servicios.css">
       <!-- GA4 -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-VNJ37D72L5"></script>
-      <script>
+      <!-- <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
             
             gtag('config', 'G-VNJ37D72L5');
-      </script> 
+      </script>  -->
       <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
@@ -27,9 +27,9 @@
             <section class="hero">
                   <div class="hero__info">
                         <h1 class="hero__title">AVISO IMPORTANTE</h1>
-                        <p class="hero__text">Volvemos a partir del Lunes 11 de Enero del 2026</p>
+                        <p class="hero__text">Cerrado el Lunes 2 de Febrero del 2026</p>
                   </div>
-                  <img class="hero__image" src="./imagenes/felizNavidadHoHoHo.jpg" alt="Logo de pcymac.com">
+                  <img class="hero__image" src="./imagenes/p4ch1-in-malbolge.png" alt="Logo de pcymac.com">
             </section>
             <!-- <section class="hero">
                   <div class="hero__info">
@@ -47,18 +47,30 @@
                         <iframe title="Análisis de Ventas TECNOMAX Clase 23 FINAL" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=fa16b2f9-1878-46a4-8ce2-d6ea75f82956&autoAuth=true&ctid=26fed691-fb38-4762-bfdb-2eb943b0cff7" frameborder="0" allowFullScreen="true"></iframe>
                   </div> -->
                   <div class="ourServices__grid">
-                        <video class="ourServices__item ourServices__item--video" src="./videos/video.mp4" controls></video>
-                        <img class="ourServices__item" src="./imagenes/servicios/camara-wifi.webp" alt="Cámara de seguridad de la marca HikVision">
-                        <img class="ourServices__item" src="./imagenes/servicios/kaspersky-antivirus.webp" alt="Antivirus Kaspersky">
-                        <img class="ourServices__item" src="./imagenes/servicios/laptop-roja.webp" alt="Computadora portatil color roja">
-                        <img class="ourServices__item" src="./imagenes/servicios/computadora-generecia.webp" alt="Computadora Genérica">
+                        <video class="ourServices__item ourServices__item--video" src="./videos/dark-factory.mp4" controls></video>                        
+                        <div>
+                              <img class="ourServices__item" src="./imagenes/servicios/camara-wifi.webp" alt="Cámara de seguridad de la marca HikVision">
+                              <h3 class="ourServices__title">Cámaras</h3>
+                        </div>
+                        <div>
+                              <img class="ourServices__item" src="./imagenes/servicios/kaspersky-antivirus.webp" alt="Antivirus Kaspersky">
+                              <h3 class="ourServices__title">Antivirus</h3>
+                        </div>
+                        <div>
+                              <img class="ourServices__item" src="./imagenes/servicios/laptop-roja.webp" alt="Computadora portatil color roja">
+                              <h3 class="ourServices__title">Laptops</h3>
+                        </div>
+                        <div>
+                              <img class="ourServices__item" src="./imagenes/servicios/computadora-generecia.webp" alt="Computadora Genérica">
+                              <h3 class="ourServices__title">Desktops</h3>
+                        </div>
                   </div>
             </section>
             <section class="marcas">
                   <h2 class="ourServices__title">Algunas de las marcas que manejamos</h2>
                   <div class="marcas__grid">
                         <div class="marcas__imagen">
-                              <img src="./imagenes/marcas/dahua.webp" alt="Logo de la marca de cámaras de cctv Dahua">
+                              <img src="./imagenes/marcas/dahua.webp" alt="Logo de la marca de cámaras de cctv Dahua">                              
                         </div>
                         <div class="marcas__imagen">
                               <img src="./imagenes/marcas/hikvision.webp" alt="Logo de la marca de cámaras de cctv Hikvision">
